Fix scroll jumping when load new data, add modal when is new message in scrolling

--- a/src/assets/styles/icons.css
+++ b/src/assets/styles/icons.css
@@ -34,11 +34,15 @@
     background-image: url('../icons/jobs.png');
 }
 
+.icon-chat {
+    background-image: url('../icons/chat.svg');
+}
+
+.icon-close {
+    background-image: url('../icons/cross.svg');
+}
+
 .icon {
     background-position: center;
     background-size: 100%;
-}
-
-.icon-chat {
-    background-image: url('../icons/chat.svg');
 }
